tests/snapshots/render__capture-off-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│                       ││line 09     ~~~~~~~~~                                │"
"│                       ││line 10     ~~~~~~~~~~                               │"
"│                       ││line 11     ~~~~~~~~~~~                              │"
"│                       ││line 12     ~~~~~~~~~~~~                             │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│no resident 7          ││line 15     ~~~~~~~~~~~~~~~                          │"
"│[summon n] [cast c]    ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[banish b] [recall r]  ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[timetable t] [quit q] ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[?]                    ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│clicks are off: ^] m   ││line 20                                              │"
"│[mouse: native m]      ││line 21     ~                                        │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────┘"
