tests/snapshots/render__cast-card-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││line 00                                                                                      │"
"│2 ○ Marisa             ││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│                       ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 14     ~~~~~~~~~~~~~~                                                                   │"
"│                       ││line 15     ~~~~~~~~~~~~~┌ cast ──────────────────────────────────┐                          │"
"│                       ││line 16     ~~~~~~~~~~~~~│ Which spell card?                      │                          │"
"│                       ││line 17     ~~~~~~~~~~~~~│   Review Sign "Second Opinion"  (pair) │                          │"
"│                       ││line 18     ~~~~~~~~~~~~~│ › Spirit Sign "Status Report"          │                          │"
"│                       ││line 19     ~~~~~~~~~~~~~│ three lines from every resident        │                          │"
"│                       ││line 20                  │ file names not usable: bad name.md     │                          │"
"│                       ││line 21     ~            │ [next ⏎] [cancel esc]                  │                          │"
"│                       ││line 22     ~~           └────────────────────────────────────────┘                          │"
"│                       ││line 23     ~~~                                                                              │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│                       ││line 32     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│[summon n] [banish b]  ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[recall r] [cast c]    ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[quit q] [?]           ││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└───────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
