tests/snapshots/render__cast-loading-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││line 00                                                                                      │"
"│2 ○ Marisa             ││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│                       ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 14     ~~~~~~~~~~~~~~                                                                   │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                                                                  │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                                                                 │"
"│                       ││line 17     ~~~~~~~~~~~~~~┌ cast ────────────────────────────────┐                           │"
"│                       ││line 18     ~~~~~~~~~~~~~~│ loading the spell cards…             │                           │"
"│                       ││line 19     ~~~~~~~~~~~~~~│ [close esc]                          │                           │"
"│                       ││line 20                   └──────────────────────────────────────┘                           │"
"│                       ││line 21     ~                                                                                │"
"│                       ││line 22     ~~                                                                               │"
"│                       ││line 23     ~~~                                                                              │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│                       ││line 32     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│[summon n] [banish b]  ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[recall r] [cast c]    ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[quit q] [?]           ││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└───────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
