tests/snapshots/render__cast-loading.snap
---
source: tests/render.rs
expression: modal_box(&m).backend()
---
"┌ cast ────────────────────────────────┐"
"│ loading the spell cards…             │"
"│ [close esc]                          │"
"└──────────────────────────────────────┘"
