tests/snapshots/render__cast-peer-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 0┌ Review Sign "Second Opinion" ─────────┐      │"
"│                       ││line 0│ Reimu talks to whom?                  │      │"
"│                       ││line 1│ › 2 ○ Marisa       ~/dev/scratch_repo │      │"
"│                       ││line 1│ [cast ⏎] [cancel esc]                 │      │"
"│                       ││line 1└───────────────────────────────────────┘      │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│                       ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[summon n] [banish b]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[recall r] [cast c]    ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[quit q] [?]           ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
